--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tiptap/pm": "^3.19.0",
     "@tiptap/react": "^3.19.0",
     "@tiptap/starter-kit": "^3.19.0",
+    "@tiptap/y-tiptap": "^3.0.2",
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.7",
     "@types/three": "^0.182.0",
@@ -41,6 +42,7 @@
     "three": "^0.182.0",
     "typescript": "^5.7.2",
     "y-indexeddb": "^9.0.12",
+    "y-prosemirror": "^1.3.7",
     "y-webrtc": "^10.3.0",
     "y-websocket": "^3.0.0",
     "yjs": "^13.6.29",
