--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.19",
     "three": "^0.182.0",
