--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "framer-motion": "^12.33.0",
     "lucide-react": "^0.563.0",
     "next": "^15.3.0",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
