--- a/package.json
+++ b/package.json
@@ -19,14 +19,24 @@
     "@react-three/fiber": "^9.5.0",
     "@supabase/supabase-js": "^2.95.3",
     "@tailwindcss/postcss": "^4.0.0",
-    "@tiptap/extension-collaboration": "^3.19.0",
-    "@tiptap/extension-collaboration-cursor": "^2.26.2",
-    "@tiptap/extension-highlight": "^3.19.0",
-    "@tiptap/extension-link": "^3.19.0",
-    "@tiptap/pm": "^3.19.0",
-    "@tiptap/react": "^3.19.0",
-    "@tiptap/starter-kit": "^3.19.0",
-    "@tiptap/y-tiptap": "^3.0.2",
+    "@tailwindcss/typography": "^0.5.19",
+    "@tiptap/extension-code-block-lowlight": "^2.10.3",
+    "@tiptap/extension-collaboration": "^2.10.3",
+    "@tiptap/extension-collaboration-cursor": "^2.10.3",
+    "@tiptap/extension-color": "^2.27.2",
+    "@tiptap/extension-highlight": "^2.10.3",
+    "@tiptap/extension-image": "^2.10.3",
+    "@tiptap/extension-link": "^2.10.3",
+    "@tiptap/extension-table": "^2.10.3",
+    "@tiptap/extension-table-cell": "^2.10.3",
+    "@tiptap/extension-table-header": "^2.10.3",
+    "@tiptap/extension-table-row": "^2.10.3",
+    "@tiptap/extension-text-align": "^2.27.2",
+    "@tiptap/extension-text-style": "^2.27.2",
+    "@tiptap/extension-underline": "^2.27.2",
+    "@tiptap/pm": "^2.10.3",
+    "@tiptap/react": "^2.10.3",
+    "@tiptap/starter-kit": "^2.10.3",
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.7",
     "@types/three": "^0.182.0",
@@ -34,6 +44,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.33.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.1.0",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.563.0",
     "next": "^15.3.0",
     "next-themes": "^0.4.6",
